Implementacja wyszukiwania użytkowników oraz dodawania pracownika przez admina